--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ function showInvoice(orderId)
     })
     .then((response) => {
         console.log('res: ' + JSON.stringify(response))
-        viewInvoiceWindow(response);
+        viewInvoiceWindow(response, orderId);
       })
     .catch(() => okayCancelWindow("Could not load order", () => {}, true));
 }
@@ -175,7 +175,8 @@ function viewInvoicesWindow(invoices)
         var row = invoices[invoice];
         var date = new Date(row["DATETIME"]).toLocaleDateString();
         var amount = formatter.format(row["AMOUNT"]);
-        addRow(row["PURCHASE_ID"], row["CUSTOMER_ID"], date, amount);
+        var name = row["FIRST_NAME"] + " " + row["LAST_NAME"];
+        addRow(row["PURCHASE_ID"], name, date, amount);
     }
     makeWindow("Orders", container);
 }
@@ -215,7 +216,7 @@ function addRowVTableInput(table, key, defaultValue, name, type="text")
     addRowVTable(table, key, valElem);
     return valElem;
 }
-function viewInvoiceWindow(invoice)
+function viewInvoiceWindow(invoice, orderId)
 {
     var container = document.createElement("div");
     container.classList.add("spreadsheetview");
@@ -302,7 +303,7 @@ function viewInvoiceWindow(invoice)
     var cancel = document.createElement("button");
     buttonContainer.appendChild(cancel);
     cancel.innerText = "Cancel";
-    var win = makeWindow("Order #"+invoice["orderId"], container, "editorderwindow");
+    var win = makeWindow("Order #"+orderId, container, "editorderwindow");
     save.onclick = function()
     {
         var fd = new FormData(form);
