--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ function showInvoices()
         return response.json();
     })
     .then((response) => {
-        console.log('res: ' + JSON.stringify(response))
+        //console.log('res: ' + JSON.stringify(response))
         viewInvoicesWindow(response);
       })
     .catch(function(reason)
@@ -123,7 +123,7 @@ function showInvoice(orderId)
         return response.json();
     })
     .then((response) => {
-        console.log('res: ' + JSON.stringify(response))
+        //console.log('res: ' + JSON.stringify(response))
         viewInvoiceWindow(response, orderId);
       })
     .catch(() => okayCancelWindow("Could not load order", () => {}, true));
@@ -334,7 +334,7 @@ function viewInvoiceWindow(invoice, orderId)
             var args = "?orderId="+orderId+"&orig_sku="+orig_sku+"&orig_quan="+orig_quan+"&new_sku="+new_sku+"&new_quan="+new_quan;
 
             var url = "php/updateItemsSold.php"+args;
-      
+
             fetch(url)
             .then((response) => {
                 if (response.ok)
@@ -368,7 +368,7 @@ function showProducts()
       return response.json();
   })
   .then((response) => {
-      console.log('res: ' + JSON.stringify(response))
+      //console.log('res: ' + JSON.stringify(response))
       viewProductsWindow(response);
     })
   .catch(function(reason)
@@ -436,7 +436,7 @@ function showCustomers()
       return response.json();
   })
   .then((response) => {
-      console.log('res: ' + JSON.stringify(response))
+      //console.log('res: ' + JSON.stringify(response))
       viewCustomersWindow(response);
     })
   .catch(function(reason)
