--- a/index.html
+++ b/index.html
@@ -584,6 +584,65 @@ function createCustomerWindow()
       win.parentNode.removeChild(win)
   }
 }
+function createProductWindow()
+{
+  var container = document.createElement("div");
+  container.classList.add("spreadsheetview");
+
+  var mnyFmt = moneyFormatter();
+  var form = document.createElement("form");
+  container.append(form);
+
+  let itemTbl = document.createElement("table");
+  form.appendChild(itemTbl);
+  itemTbl.classList.add("spreadsheetview");
+  let name = addRowVTableInput(itemTbl, "NAME", "", "_name");
+  let inventory = addRowVTableInput(itemTbl, "INVENTORY", "", "_inventory");
+  let price = addRowVTableInput(itemTbl, "PRICE", "", "_price");
+  let type = addRowVTableInput(itemTbl, "TYPE", "", "_type");
+  let model = addRowVTableInput(itemTbl, "MODEL", "", "_model");
+  let manf = addRowVTableInput(itemTbl, "MANF", "", "_manf");
+  let size = addRowVTableInput(itemTbl, "SIZE", "", "_size");
+
+  var buttonContainer = document.createElement("div");
+  container.appendChild(buttonContainer);
+  buttonContainer.style.margin = "5px";
+  var save = document.createElement("button");
+  buttonContainer.appendChild(save);
+  save.innerText = "Save"
+
+  var win = makeWindow("New Product", container);
+
+  save.onclick = function()
+  {
+      var fd = new FormData(form);
+      var name = "name="+fd.get("_name");
+      var inventory = "inventory="+fd.get("_inventory");
+      var price = "price="+fd.get("_price");
+      var type = "type="+fd.get("_type");
+      var model = "model="+(fd.get("_model") || "NULL");
+      var manf = "manf="+(fd.get("_manf") || "NULL");
+      var size = "size="+(fd.get("_size") || "NULL");
+
+      var args = name+"&"+inventory+"&"+price+"&"+type+"&"+model+"&"+manf+"&"+size;
+      var url = "php/addProduct.php?"+args;
+      alert(url);
+
+      fetch(url)
+      .then((response) => {
+          if (response.ok)
+              okayCancelWindow("Changes saved", () => {}, true);
+          else
+              okayCancelWindow("Could not save (invalid data)", () => {}, true);
+      })
+      .catch((reason) => {
+          console.log(reason);
+          okayCancelWindow("Could not save (network issue)", () => {}, true);
+      });
+      win.parentNode.removeChild(win)
+  }
+}
+
 </script>
 </head>
 <body onload="updateClock(); setInterval(updateClock, 2000);">
