Added new icons for start menu

--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@ function viewProductsWindow(products)
     <div class="menucontents">
         <div class="menuleft">
             <div class="menuitem" onclick="showInvoices();">
-                <img src="bliss.jpg" width="50px" height="50px" class="menuitemicon" alt="">
+                <img src="img/orders.png" width="50px" height="50px" class="menuitemicon" alt="">
                 <div class="menuitemtext">
                     <span class="menuitemtitle">Orders</span>
                     <br/>
@@ -700,15 +700,23 @@ function viewProductsWindow(products)
                 </div>
             </div>
             <div class="menuitem" onclick="showProducts();">
-                <img src="bliss.jpg" width="50px" height="50px" class="menuitemicon" alt="">
+                <img src="img/products.jpeg" width="50px" height="50px" class="menuitemicon" alt="">
                 <div class="menuitemtext">
                     <span class="menuitemtitle">Products</span>
                     <br/>
                     <span class="menuitemsubtext">View Products</span>
                 </div>
             </div>
+            <div class="menuitem" onclick="showCustomers();">
+                <img src="img/customers.png" width="50px" height="50px" class="menuitemicon" alt="">
+                <div class="menuitemtext">
+                    <span class="menuitemtitle">Customers</span>
+                    <br/>
+                    <span class="menuitemsubtext">View current customers</span>
+                </div>
+            </div>
             <div class="menuitem" onclick="createProductWindow();">
-                <img src="bliss.jpg" width="50px" height="50px" class="menuitemicon" alt="">
+                <img src="img/plus.jpeg" width="50px" height="50px" class="menuitemicon" alt="">
                 <div class="menuitemtext">
                     <span class="menuitemtitle">New Product</span>
                     <br/>
@@ -716,19 +724,11 @@ function viewProductsWindow(products)
                 </div>
             </div>
             <div class="menuitem" onclick="createCustomerWindow();">
-                <img src="bliss.jpg" width="50px" height="50px" class="menuitemicon" alt="">
+                <img src="img/plus.jpeg" width="50px" height="50px" class="menuitemicon" alt="">
                 <div class="menuitemtext">
                     <span class="menuitemtitle">New Customer</span>
                     <br/>
                     <span class="menuitemsubtext">Create a new customer</span>
-                </div>
-            </div>
-            <div class="menuitem" onclick="showCustomers();">
-                <img src="bliss.jpg" width="50px" height="50px" class="menuitemicon" alt="">
-                <div class="menuitemtext">
-                    <span class="menuitemtitle">Customers</span>
-                    <br/>
-                    <span class="menuitemsubtext">View current customers</span>
                 </div>
             </div>
         </div><div class="menuright">
